# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: github-actions-demo.yml  main.yml
gendiff/: __init__.py  compare_data.py  gendiff.py  parse.py  parse_json_yaml.py  parser.py
gendiff/formaters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixture/: correct.py  right_stylish_format.txt
